Fix footer email

--- a/ChameleonServices.Web/Shared/MainLayout.razor
+++ b/ChameleonServices.Web/Shared/MainLayout.razor
@@ -43,7 +43,7 @@
 
             <div>
                 <span class="icon cs-mail"></span>
-                <span><a class="link" href="mailto:info@chameleon-services.com">info@chameleon-services.com</a></span>
+                <span><a class="link" href="mailto:info@chameleon.services">info@chameleon.services</a></span>
             </div>
         </div>
     </section>
