--- a/ChameleonServices.Web/Components/ChameleonBanner.razor
+++ b/ChameleonServices.Web/Components/ChameleonBanner.razor
@@ -1,15 +1,46 @@
 ﻿@inject HttpClient Client
+@inject IJSRuntime JS
+@inject NavigationManager NavManager
 
-@*<iron-ajax auto url="[[imageListPath]]" handle-as="json" on-response="parseBannerImages" debounce-duration="300"></iron-ajax>*@
+@if (ImageSources.Count > 0)
+{
+    <MudCarousel Class="mud-width-full" id="chameleon-banner" Style="height: 100%; width: 100%" ShowArrows="false" ShowBullets="false" AutoCycle="true" TData="object">
+        @foreach (var image in ImageSources)
+        {
+            <MudCarouselItem Transition="transition" Color="@Color.Primary">
+                <div class="banner-slide" style="background-image: url('@image');"></div>
+            </MudCarouselItem>
+        }
+    </MudCarousel>
+}
 
-<div id="banner-background"></div>
-<div id="banner-preload"></div>
+<div id="banner-preload">
+    @foreach (var img in ImageSources)
+    {
+        <img src="@img" />
+    }
+</div>
 
 @code {
+    public ICollection<Uri> ImageSources { get; set; }
+    private Transition transition = Transition.Fade;
+
+    public ChameleonBanner()
+    {
+        ImageSources = Array.Empty<Uri>();
+    }
+
     protected override async Task OnInitializedAsync()
     {
-        // var data = await Client.GetFromJsonAsync<dynamic>("banner.json");
-        // parseBannerImages(data);
+        var data = await Client.GetFromJsonAsync<ICollection<string>>("banner.json") ?? Array.Empty<string>();
+        await LoadImages(data);
+    }
+
+    async Task LoadImages(ICollection<string> relativeUrls)
+    {
+
+        ImageSources = relativeUrls.Select(x => new Uri($"{NavManager.BaseUri}/media/banner/{x}")).ToArray();
+        StateHasChanged();
     }
 
     //void parseBannerImages(data) {
@@ -41,18 +72,18 @@
     //                    this.preloadImage(0);
     //                    this.preloadImage(1);
     //                    break;
-    //            }
+        //            }
 
     //            // If we have an image, set up the background
     //            if(this.images.length > 0) {
     //                this.maxImage = bannerImages.length - 1;
     //                let banner = this.shadowRoot.querySelector("#banner-background");
     //                banner.style.backgroundImage = "url('" + this.images[0] + "')";
-    //            }
+        //            }
 
     //            if(this.images.length > 1)
     //                setInterval(this.changeImage.bind(this), this.transitionTime * 1000);
-        //        }
+    //        }
 
     //        preloadImage(index) {
     //            if(this.cached < index + 1) {
@@ -60,21 +91,21 @@
     //                preload.style.backgroundImage = `url("${this.images[index]}")`;
     //                this.cached++;
     //            }
-        //        }
+    //        }
 
     //        changeImage() {
     //            this.currentImage++;
     //            if(this.currentImage > this.maxImage) {
     //                this.currentImage = 0;
     //                this.imagesAllLoaded = true;
-    //            }
+        //            }
 
     //            if(!this.imagesAllLoaded) {
     //                // Preload next image in the series
     //                this.preloadImage(this.currentImage + 1);
-    //            }
+        //            }
 
     //            let banner = this.shadowRoot.querySelector("#banner-background");
     //            banner.style.backgroundImage = "url('" + this.images[this.currentImage] + "')";
-        //        }
+    //        }
 }
