--- a/ChameleonServices.Web/Components/ChameleonBanner.razor.scss
+++ b/ChameleonServices.Web/Components/ChameleonBanner.razor.scss
@@ -1,24 +1,30 @@
-﻿:host {
-    display: block;
-    height: 100%;
-    width: inherit;
-    background-color: antiquewhite;
+﻿header {
+    display: flex;
+    flex-direction: row;
+    background-color: var(--chameleon-dark-green, forestgreen);
     position: relative;
     box-shadow: 0px 4px 5px 0 #333;
     z-index: -1;
+    height: 55vh;
 }
 
-#banner-background {
+header section#chameleon-banner {
+    background-color: antiquewhite;
+    padding-bottom: 1em;
+    position: relative;    
+}
+
+div.banner-slide {
     display: block;
     position: absolute;
     box-sizing: border-box;
     width: 100%;
     height: 100%;
-    padding-top: 3em;
-    background: antiquewhite no-repeat center center fixed;
+    background: antiquewhite no-repeat center center local;
     background-image: none;
     background-size: cover;
-    transition: 3s;
+    transition: 1.5s;
+    overflow: hidden;
 }
 
 #banner-preload {
