--- a/ChameleonServices.Web/Shared/MainLayout.razor
+++ b/ChameleonServices.Web/Shared/MainLayout.razor
@@ -32,17 +32,25 @@
 
         <div id="footer-contact-info">
             <div>
-                <span class="icon cs-phone"></span>
+                <span class="icon">
+                    <MudIcon Icon="@Icons.Filled.Phone" Size="Size.Small" Title="Phone" />
+                </span>
                 <span>(941) 893.9977</span>
             </div>
 
             <div>
-                <span class="icon cs-location"></span>
+                <span class="icon">
+                    <MudIcon Icon="@Icons.Filled.Home" Size="Size.Small" Title="Address" />
+                </span>
+
                 <address>1235 Kimball Road<br> Venice, FL 34293</address>
             </div>
 
             <div>
-                <span class="icon cs-mail"></span>
+                <span class="icon">
+                    <MudIcon Icon="@Icons.Filled.Email" Size="Size.Small" Title="Email" />
+                </span>
+
                 <span><a class="link" href="mailto:info@chameleon.services">info@chameleon.services</a></span>
             </div>
         </div>
