Clean up publishing for smaller deployments

--- a/ChameleonServices.Web/Pages/Index.razor
+++ b/ChameleonServices.Web/Pages/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Chameleon Services</PageTitle>
 
 <h1>Chameleon Services</h1>
 <p>Chameleon Services provides professional building and grounds maintenance.  We help your home 
