--- a/ChameleonServices.Web/wwwroot/scss/app.scss
+++ b/ChameleonServices.Web/wwwroot/scss/app.scss
@@ -295,7 +295,7 @@ blockquote {
 
 .grid {
     display: grid;
-    grid-gap: 1em;
+    gap: 1em;
 }
 
 .grid-header {
@@ -335,7 +335,8 @@ footer {
     position: relative;
     box-sizing: border-box;
     padding: 1em;
-    flex-basis: row nowrap;
+    flex-direction: row;
+    flex-wrap: nowrap;
     align-items: center;
     color: white;
     border-top: 3px solid white;
